# game24

./: CMakeLists.txt  game24.c  iteration1.c  iteration2.c  iteration3.c  measurements.inc  report.tex
tests/: CMakeLists.txt  canonicalizeNeverTruncates.c  canonicalizeTree.c  common.inc  commutativity.c  countTreeNodes.inc  excercise-examples.in  findNullPointer.c  findPointer.c  hashTree.c  insert.c  solutionCount.sh  swap.c  upperBound.c
tikz/: bitlayout.inc  bitlayout.tex  commutative.inc  syntax-tree-construction.inc  syntax-trees.inc
